--- a/RecycleGame/Base.lproj/Main.storyboard
+++ b/RecycleGame/Base.lproj/Main.storyboard
@@ -16,33 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sf-Fh-KuA">
-                                <rect key="frame" x="121" y="320" width="152" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Electronic Waste"/>
-                                <connections>
-                                    <segue destination="2eG-Vl-flb" kind="show" id="NCx-fB-wBG"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TrL-fO-mss">
-                                <rect key="frame" x="134" y="363" width="126" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Plastic Waste"/>
-                                <connections>
-                                    <segue destination="ZbB-cQ-35d" kind="show" id="1Qn-3R-UpK"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNc-AE-yRx">
-                                <rect key="frame" x="129" y="406" width="136" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Organic Waste"/>
-                                <connections>
-                                    <segue destination="6dw-af-3am" kind="show" id="WWR-q9-lKQ"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eke-fa-GYr">
                                 <rect key="frame" x="130" y="677" width="133" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -59,6 +32,33 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sf-Fh-KuA">
+                                <rect key="frame" x="90" y="254" width="213" height="94"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="ewaste_b" title="Electronic Waste"/>
+                                <connections>
+                                    <segue destination="2eG-Vl-flb" kind="show" id="NCx-fB-wBG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TrL-fO-mss">
+                                <rect key="frame" x="108" y="365" width="191" height="94"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="plastic_b" imagePlacement="trailing" title="Plastic Waste"/>
+                                <connections>
+                                    <segue destination="ZbB-cQ-35d" kind="show" id="1Qn-3R-UpK"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNc-AE-yRx">
+                                <rect key="frame" x="97" y="487" width="199" height="94"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="organic_b" title="Organic Waste"/>
+                                <connections>
+                                    <segue destination="6dw-af-3am" kind="show" id="WWR-q9-lKQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="NRN-Lu-Wu8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -92,6 +92,12 @@
                     <view key="view" contentMode="scaleToFill" id="bJh-Pk-qBe">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ewaste_f" translatesAutoresizingMaskIntoConstraints="NO" id="FgL-AB-Zca">
+                                <rect key="frame" x="16" y="103" width="361" height="715"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="0b1-hz-8cC"/>
                         <color key="backgroundColor" red="0.92128556966781616" green="0.58231480984952833" blue="0.55019616182198838" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
@@ -99,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z9r-12-mbf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1972" y="-659"/>
+            <point key="canvasLocation" x="1971.7557251908397" y="-659.15492957746483"/>
         </scene>
         <!--Organic-->
         <scene sceneID="405-ok-b0o">
@@ -108,6 +114,12 @@
                     <view key="view" contentMode="scaleToFill" id="8zy-xa-oaW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="organic_f" translatesAutoresizingMaskIntoConstraints="NO" id="t3b-co-Juo">
+                                <rect key="frame" x="16" y="103" width="361" height="715"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="cT1-FP-Uzf"/>
                         <color key="backgroundColor" red="0.67572084407216493" green="0.67572084407216493" blue="0.67572084407216493" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
@@ -124,6 +136,44 @@
                     <view key="view" contentMode="scaleToFill" id="fed-lj-4it">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ewaste_p" highlightedImage="ewaste_h" translatesAutoresizingMaskIntoConstraints="NO" id="ec2-Vp-lhE">
+                                <rect key="frame" x="16" y="685" width="102" height="121"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="organic_p" highlightedImage="organic_h" translatesAutoresizingMaskIntoConstraints="NO" id="A6k-gq-uXl">
+                                <rect key="frame" x="145" y="685" width="102" height="121"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="plastic_p" highlightedImage="plastic_h" translatesAutoresizingMaskIntoConstraints="NO" id="fIy-9g-saH">
+                                <rect key="frame" x="275" y="685" width="102" height="121"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bouilloire" translatesAutoresizingMaskIntoConstraints="NO" id="lXl-rB-uGD">
+                                <rect key="frame" x="10" y="199" width="114" height="109"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bouteille" translatesAutoresizingMaskIntoConstraints="NO" id="4AK-qM-t0G">
+                                <rect key="frame" x="160" y="140" width="130" height="113"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coquille" translatesAutoresizingMaskIntoConstraints="NO" id="e6F-dX-k2L">
+                                <rect key="frame" x="115" y="316" width="132" height="125"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pasteque" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-u3-eMf">
+                                <rect key="frame" x="255" y="247" width="103" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sachet" translatesAutoresizingMaskIntoConstraints="NO" id="MoV-LQ-Ct3">
+                                <rect key="frame" x="16" y="469" width="103" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="telephone" translatesAutoresizingMaskIntoConstraints="NO" id="bbd-Ff-Fh4">
+                                <rect key="frame" x="274" y="441" width="103" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="D6R-jK-fbb"/>
                         <color key="backgroundColor" red="0.75026593128598651" green="1" blue="0.76896742285723796" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
@@ -131,7 +181,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CCA-XS-HlR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="601" y="951"/>
+            <point key="canvasLocation" x="600.76335877862596" y="950.70422535211276"/>
         </scene>
         <!--Plastic-->
         <scene sceneID="I68-bd-Mkt">
@@ -140,6 +190,12 @@
                     <view key="view" contentMode="scaleToFill" id="5qy-ob-DTT">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="plastic_f" translatesAutoresizingMaskIntoConstraints="NO" id="ypI-gE-BpH">
+                                <rect key="frame" x="16" y="103" width="361" height="715"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Q56-6v-fId"/>
                         <color key="backgroundColor" red="1" green="0.7354410156121457" blue="0.5892315355461486" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
@@ -151,6 +207,24 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bouilloire" width="500" height="400"/>
+        <image name="bouteille" width="225" height="358"/>
+        <image name="coquille" width="288" height="244"/>
+        <image name="ewaste_b" width="61" height="80"/>
+        <image name="ewaste_f" width="668" height="1208"/>
+        <image name="ewaste_h" width="634" height="825"/>
+        <image name="ewaste_p" width="634" height="825"/>
+        <image name="organic_b" width="63" height="80"/>
+        <image name="organic_f" width="600" height="1264"/>
+        <image name="organic_h" width="650" height="825"/>
+        <image name="organic_p" width="650" height="825"/>
+        <image name="pasteque" width="365" height="300"/>
+        <image name="plastic_b" width="65" height="80"/>
+        <image name="plastic_f" width="640" height="1336"/>
+        <image name="plastic_h" width="650" height="800"/>
+        <image name="plastic_p" width="650" height="800"/>
+        <image name="sachet" width="450" height="501"/>
+        <image name="telephone" width="253" height="341"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
