--- a/RecycleGame/Base.lproj/Main.storyboard
+++ b/RecycleGame/Base.lproj/Main.storyboard
@@ -141,11 +141,11 @@
                                 <rect key="frame" x="16" y="685" width="102" height="121"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="organic_p" highlightedImage="organic_h" translatesAutoresizingMaskIntoConstraints="NO" id="A6k-gq-uXl">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="organic_p" highlightedImage="organic_h" translatesAutoresizingMaskIntoConstraints="NO" id="A6k-gq-uXl">
                                 <rect key="frame" x="145" y="685" width="102" height="121"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="plastic_p" highlightedImage="plastic_h" translatesAutoresizingMaskIntoConstraints="NO" id="fIy-9g-saH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="plastic_p" highlightedImage="plastic_h" translatesAutoresizingMaskIntoConstraints="NO" id="fIy-9g-saH">
                                 <rect key="frame" x="275" y="685" width="102" height="121"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -153,15 +153,11 @@
                                 <rect key="frame" x="10" y="199" width="114" height="109"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bouteille" translatesAutoresizingMaskIntoConstraints="NO" id="4AK-qM-t0G">
-                                <rect key="frame" x="160" y="140" width="130" height="113"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pasteque" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-u3-eMf">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pasteque" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-u3-eMf">
                                 <rect key="frame" x="255" y="247" width="103" height="111"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sachet" translatesAutoresizingMaskIntoConstraints="NO" id="MoV-LQ-Ct3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sachet" translatesAutoresizingMaskIntoConstraints="NO" id="MoV-LQ-Ct3">
                                 <rect key="frame" x="21" y="472" width="103" height="111"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -169,8 +165,12 @@
                                 <rect key="frame" x="274" y="441" width="103" height="111"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coquille" translatesAutoresizingMaskIntoConstraints="NO" id="e6F-dX-k2L">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coquille" translatesAutoresizingMaskIntoConstraints="NO" id="e6F-dX-k2L">
                                 <rect key="frame" x="115" y="316" width="132" height="125"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bouteille" translatesAutoresizingMaskIntoConstraints="NO" id="4AK-qM-t0G">
+                                <rect key="frame" x="160" y="140" width="130" height="113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
